<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_SAFETY_FBStatus" Id="{cc89e3db-d6f3-4043-a4fe-50e8d6e43e4c}">
    <Declaration><![CDATA[TYPE ST_SAFETY_FBStatus :
STRUCT
	BUnknown						: BYTE;
	BState							: BYTE;
	wDiagnosis						: WORD;
	wInputs							: WORD; (* 1B - Restart, EDM... 2B - Safe inputs *)
	wOutputs						: WORD; (* 1B - Error, EDM... 2B - Safe inputs  *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>